fix: increase spacing between run / clear buttons and block output

--- a/src/styles.css
+++ b/src/styles.css
@@ -71,7 +71,7 @@ pre:hover .run-button-disabled, pre:hover .clear-button-disabled {
 }
 
 pre:hover code.language-output {
-	margin-bottom: 23px;
+	margin-bottom: 28px;
 }
 
 :not(.use-custom-output-color) code.language-output span.stdout {
